--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   },
   "dependencies": {
     "node-sass": "^4.8.3",
+    "prop-types": "15.6.0",
     "rc-pagination": "1.15.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
-    "react-fileupload": "2.4.0",
-    "react-router-dom": "4.2.2"
+    "react-router-dom": "4.2.2",
+    "simditor": "^2.3.6"
   }
 }
